--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#servicios">Servicios</a></li>
                 <li><a href="#productos">Productos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
-                <li><a href="https://discord.gg/EpNYYmGbVZ" class="btn-discord">Unirse <i class="fab fa-discord"></i></a></li>
+                <li><a href="https://discord.gg/QE2fdxD6gJ" class="btn-discord">Unirse <i class="fab fa-discord"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -30,7 +30,7 @@
         <div class="hero-content">
             <h1>Bienvenido a <span>Artemis Shop</span></h1>
             <p>Tu tienda de confianza para cuentas de streaming, videojuegos, bots personalizados y mucho más</p>
-            <a href="https://discord.gg/EpNYYmGbVZ" class="btn-primary">Unirse al Servidor <i class="fab fa-discord"></i></a>
+            <a href="https://discord.gg/QE2fdxD6gJ" class="btn-primary">Unirse al Servidor <i class="fab fa-discord"></i></a>
         </div>
     </section>
 
@@ -134,7 +134,7 @@
                 <i class="fab fa-discord"></i>
                 <h3>Únete a Artemis Shop</h3>
                 <p>Accede a todos nuestros productos y servicios</p>
-                <a href="https://discord.gg/artemisshop" class="btn-primary">Unirse Ahora</a>
+                <a href="https://discord.gg/QE2fdxD6gJ" class="btn-primary">Unirse Ahora</a>
             </div>
         </div>
     </section>
